refactor: remove remaining legacy helpers